# swift_esp32c6_hello

./: .gitignore  README.md
components/http_bridge/: CMakeLists.txt  http_bridge.c
components/http_bridge/include/: http_bridge.h
components/protocols_examples_common/: CMakeLists.txt  wifi_connect.c
components/protocols_examples_common/include/: protocol_examples_common.h
components/test_cmp/: idf_component.yml  test_cmp.c
components/test_cmp/include/: test_cmp.h
components/wifi_bridge/: CMakeLists.txt  idf_component.yml  wifi_bridge.c
components/wifi_bridge/include/: wifi_bridge.h
main/: Bool_Int.swift  BridgingHeader.h  CMakeLists.txt  Delay.swift  DigitalIndicator.swift  DigitalInput.swift  ErrorHandler.swift  GPIOPin.swift  HTTP.swift  Main.swift  MomentaryInput.swift  Note.swift  WiFi.swift
main/HTTPClient/: HTTP.swift  HTTPClientError.swift  HTTPClientProtocol.swift  MyClient.swift
main/HTTPRevisedTypes/: HTTPField.swift  HTTPFieldName.swift  HTTPFields.swift  HTTPParsedFields.swift  HTTPRequest.swift  HTTPResponse.swift  NIOLock.swift  README.md
main/HTTPTypes/: HTTPFields.swift  ignore_CMakeLists.txt
